--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-slot": "^1.2.2",
+    "@react-three/drei": "^10.0.7",
+    "@react-three/fiber": "^9.1.2",
     "@tailwindcss/vite": "^4.1.7",
     "class-variance-authority": "^0.7.1",
+    "framer-motion": "^12.12.1",
     "lucide-react": "^0.511.0",
     "mongoose": "^8.14.3",
     "next": "15.3.2",
