--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/drei": "^10.0.7",
     "@react-three/fiber": "^9.1.2",
     "@tailwindcss/vite": "^4.1.7",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "framer-motion": "^12.12.1",
     "lucide-react": "^0.511.0",
