--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "tailwind.config.js", "src/context/LanguageContext.tsx", "src/app/api/events/route.ts", "src/app/api/bookings/route.js", "src/app/lib/auth.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "tailwind.config.js", "src/context/LanguageContext.tsx", "src/app/api/events/route.ts", "src/app/api/bookings/route.ts", "src/app/lib/auth.js"],
   "exclude": ["node_modules"]
 }
